@@ -1,3 +1,9 @@
+2008-06-11  Marcus D. Hanwell  <marcus@cryos.org>
+
+	* libavogadro/src/tools/aligntool.cpp,
+	libavogadro/src/tools/clickmeasuretool.cpp: Fixed initialisation of
+	the QVarLengthArray.
+
 2008-06-09  Marcus D. Hanwell  <marcus@cryos.org>
 
 	* libavogadro/src/extensions/gaussianinputdialog.*: Added a compact
